--- a/index.html
+++ b/index.html
@@ -35,33 +35,33 @@
         <div class="main-block__wrapper container">
             <div class="main-block__item">
                 <h2 class="general__caption">Дизайн интерьеров</h2>
-                <ul class="general__list">
-                    <li>Разработка проектов. Отделочные работы.</li>
-                    <li>Поставка мебели и материалов. Решение под любой бюджет</li>
-                    <li>Начинаем работать сразу после получения заявки.</li>
-                </ul>
+                <div class="general__list">
+                    <p>Разработка проектов. Отделочные работы.
+                    Поставка мебели и материалов. Решение под любой бюджет
+                    Начинаем работать сразу после получения заявки.</p>
+                </div>
                 <div class="main-block__decor"></div>
                 <button class="main-button js-button" data-target="consultation">рассчитать стоимость проектирования</button> 
             </div>
             <div class="main-block__item">
                 <h2 class="general__caption">Ремонтные работы</h2>
-                <ul class="general__list">
-                    <li>Выполнение ремонтных работ на высоком уровне под ключ.</li>
-                    <li>Решение под любой бюджет</li>
-                    <li>Начинаем работать сразу после получения заявки</li>
-                </ul>
+                <div class="general__list">
+                    <p>Выполнение ремонтных работ на высоком уровне под ключ.
+                    Решение под любой бюджет
+                    Начинаем работать сразу после получения заявки</p>
+                </div>
                 <div class="main-block__decor"></div>
                 <button class="main-button js-button" data-target="consultation">рассчитать стоимость ремонта</button>
             </div>
             <div class="svg-decor">
-                <svg viewBox='0 0 100 100' class="svg-content" preserveAspectRatio="none">
+                <svg viewBox='0 0 100 300' class="svg-content" preserveAspectRatio="none">
                     <defs>
                         <mask id='mask-1' x='0' y='0' width='100' height='100'>
-                            <rect x="0" y="0" width="100" height="100" fill="#fff" mask="url(#mask-1)"></rect>
-                            <text class="text" fill='#000' id="text" font-size="50px" font-family= "Playfair Display SC" font-weight="800">D</text>
+                            <rect x="0" y="0" width="100" height="300" fill="#fff"></rect>
+                            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" class="text" fill='#000' font-family= "Playfair Display SC" font-weight="800">D</text>
                         </mask>
                     </defs>
-                    <rect x="0" y="0" width="100" height="100" fill="rgba(37,32,32,0.8)" mask="url(#mask-1)"></rect>
+                    <rect x="0" y="0" width="100" height="300" fill="rgba(37,32,32,0.8)" mask="url(#mask-1)"></rect>
                 </svg>
             </div>
         </div>
@@ -133,16 +133,17 @@
     <section class="offers-block" id="offers">
         <div class="offers-block__background" style="background-image: url(./img/offers-bg.jpg)">
             <div class="svg-decor">
-                <svg viewBox='0 0 100 100' class="svg-content" preserveAspectRatio="none">
+                <svg viewBox='0 0 100 200' class="svg-content" preserveAspectRatio="none">
                     <defs>
                         <mask id='mask-2' x='0' y='0' width='100' height='100'>
                             <rect class="decor-bg" x='5' y='10' width="90" height="30" fill="rgba(255,255,255,0.5)" />
-                            <rect x="0" y="0" width="100" height="100" fill="rgba(255,255,255,0.8)"></rect>
-                            <rect x="0" y="0" width="100" height="5" fill="#fff"></rect>
-                            <text x="0" y="0" class="text" fill='#000' id="text" font-size="40px" font-family= "Playfair Display SC">S</text>
+                            <rect x="0" y="0" width="100" height="200" fill="rgba(255,255,255,0.8)"></rect>
+                            <rect x="0" y="0" width="100" height="5" fill="#fff" class="top-line"></rect>
+                            <text x="0" y="0" class="text" fill='#000' font-size="40px" font-family= "Playfair Display SC" font-weight="800">S</text>
                         </mask>
                     </defs>
-                    <rect x="0" y="0" width="100" height="100" fill="rgba(255,255,255,1)" mask="url(#mask-2)"></rect>
+                    <text x="0" y="0" class="text" fill='#bdb8b5' font-size="40px" font-family= "Playfair Display SC" opacity="0.8" font-weight="800">S</text>
+                    <rect x="0" y="0" width="100" height="200" fill="rgba(255,255,255,1)" mask="url(#mask-2)"></rect>
                 </svg>
                 <div class="offer-decor-bg"></div>
             </div>
@@ -339,16 +340,17 @@
     <section class="offers-block">
         <div class="offers-block__background" style="background-image: url(./img/offers-bg.jpg)">
             <div class="svg-decor offers">
-                <svg viewBox='0 0 100 100' class="svg-content" preserveAspectRatio="xMinYMin meet">
+                <svg viewBox='0 0 100 200' class="svg-content" preserveAspectRatio="xMinYMin meet">
                     <defs>
                         <mask id='mask-3' x='0' y='0' width='100' height='100'>
                             <rect class="decor-bg" x='5' y='10' width="90" height="30" fill="rgba(255,255,255,0.5)" />
-                            <rect x="0" y="0" width="100" height="100" fill="rgba(255,255,255,0.8)"></rect>
-                            <rect x="0" y="0" width="100" height="5" fill="#fff"></rect>
-                            <text x="2" y="40" height="10" class="text" fill='#000' id="text" font-size="40px" font-weight="800" font-family= "Playfair Display SC" opacity="0.8">I</text>
+                            <rect x="0" y="0" width="100" height="200" fill="rgba(255,255,255,0.8)"></rect>
+                            <rect x="0" y="0" width="100" height="5" fill="#fff" class="top-line"></rect>
+                            <text x="2" y="40" height="10" class="text" fill='#000' font-size="40px" font-weight="800" font-family= "Playfair Display SC">I</text>
                         </mask>
                     </defs>
-                    <rect x="0" y="0" width="100" height="100" fill="rgba(255,255,255,1)" mask="url(#mask-3)"></rect>
+                    <text x="2" y="40" height="10"  class="text" fill='#bdb8b5' font-size="40px" font-family="Playfair Display SC" opacity="0.8" font-weight="800">I</text>
+                    <rect x="0" y="0" width="100" height="200" fill="rgba(255,255,255,1)" mask="url(#mask-3)"></rect>
                 </svg>
                 <div class="offer-decor-bg"></div>
             </div>
@@ -545,9 +547,9 @@
         <div class="our-project__wrapper container">
             <div class="our-project__wrapper-info">
                 <h2 class="main_caption">Последние проекты</h2>
-                <ul class="general__list">
-                    <li>Внашей работе мы успешно реализовываем любые стили: от класики и этно до современных минимализма и модерна</li>
-                </ul>
+                <div class="general__list">
+                    <p>Внашей работе мы успешно реализовываем любые стили: от класики и этно до современных минимализма и модерна</p>
+                </div>
                 <div class="word-decor">G</div>
             </div>
             <div class="our-project__slider">
@@ -722,25 +724,25 @@
     <section class="consultation">
         <div class="consultatin-bg" style='background-image:url(./img/consultation-bg.png)'>
             <div class="svg-decor">
-                <svg viewBox='0 0 100 100' class="svg-content" preserveAspectRatio="none">
+                <svg viewBox='0 0 100 200' class="svg-content" preserveAspectRatio="none">
                     <defs>
                         <mask id='mask-4' x='0' y='0' width='100' height='100'>
-                            <rect x="0" y="0" width="100" height="100" fill="#fff"></rect>
+                            <rect x="0" y="0" width="100" height="200" fill="#fff"></rect>
                             <text class="text" fill='#000' font-size="50px" font-family= "Playfair Display SC" font-weight="800" opacity="1">N</text>
                         </mask>
                     </defs>
                     <text class="text" fill='#5b5755' font-size="50px" font-family= "Playfair Display SC"  font-weight="800" opacity="0.5">N</text>
-                    <rect x="0" y="0" width="100" height="100" fill="rgba(38,38,38,0.8)" mask="url(#mask-4)"></rect>
+                    <rect x="0" y="0" width="100" height="200" fill="rgba(38,38,38,0.8)" mask="url(#mask-4)"></rect>
                 </svg>
             </div>
         </div>
         <div class="consultation__wrapper container">
             <div class="consultation__description">
                 <h2 class="main_caption">Бесплатная консультация</h2>
-                <ul class="general__list">
-                    <li>Мы – не просто компания, мы – команда. За каждым нашим проектом стоит работа большого количества людей – это дизайнеры, инженеры, менеджеры по работе с фабриками. Мы делаем это все для того, чтобы каждому заказчику было удобно и комфортно работать с нами.</li><br>
-                    <li>Мы гарантируем успех проекта и будем совершенствовать результат, пока он вас не устроит</li>
-                </ul>
+                <div class="general__list">
+                    <p>Мы – не просто компания, мы – команда. За каждым нашим проектом стоит работа большого количества людей – это дизайнеры, инженеры, менеджеры по работе с фабриками. Мы делаем это все для того, чтобы каждому заказчику было удобно и комфортно работать с нами.<br><br>
+                    Мы гарантируем успех проекта и будем совершенствовать результат, пока он вас не устроит</p>
+                </div>
             </div>
             <div class="main-form">
                 <h3 class="main-form__caption">форма записи</h3>
@@ -826,10 +828,12 @@
                 <div class="word-decor">I</div>
             </div>
             <div class="buy-furniture__description">
-                <h2 class="main_caption">Закупка мебели</h2>
-                <ul class="general__list">
-                    <li>Для каждого проекта мы предлагаем три варианта реализации в разных ценовых категориях. При этом идея дизайнера полностью отражена в каждом из них. Такой подход позволяет реализовать даже самую смелую идею в рамках любого бюджета</li>
-                </ul>
+                <div class="wrapper">
+                    <h2 class="main_caption">Закупка мебели</h2>
+                    <div class="general__list">
+                        <p>Для каждого проекта мы предлагаем три варианта реализации в разных ценовых категориях. При этом идея дизайнера полностью отражена в каждом из них. Такой подход позволяет реализовать даже самую смелую идею в рамках любого бюджета</p>
+                    </div>
+                </div>
                 <ul class="buy-furniture__list">
                     <li class="buy-furniture__item">
                         <h5 class="caption">Комфорт</h5>
@@ -873,10 +877,10 @@
         <div class="implementation__wrapper container">
             <div class="implementation__description">
                 <h2 class="main_caption">Прект<span>vs</span> реализация</h2>
-                <ul class="general__list">
-                    <li>Мы можем помочь воплотить дизайн в жизнь: после утверждения дизайн-проекта мы не только подберем и закупим мебель и материалы, но и сделаем ремонт.</li><br>
-                    <li>Каждый проект уникален и мы составим смету, в которой будут зафиксированы сроки и стоимость работ</li>
-                </ul>
+                <div class="general__list">
+                    <p>Мы можем помочь воплотить дизайн в жизнь: после утверждения дизайн-проекта мы не только подберем и закупим мебель и материалы, но и сделаем ремонт.<br><br>
+                    Каждый проект уникален и мы составим смету, в которой будут зафиксированы сроки и стоимость работ</p>
+                </div>
                 <div class="implementation__button">
                     <button href="#offers" class='js-link'>К выбору услуг <span class="icon-arrow"></span></button>
                 </div>
@@ -885,13 +889,13 @@
             <div class="implementation__slider">
                 <ul class="implementation__slider-list">
                     <li class="implementation__slider-item show">
-                        <div class="implementation__slider-img range" style="width: 400px;">
+                        <div class="implementation__slider-img range" style="width: 50%;">
                             <img src="./img/implementation-img-1.png" alt="Дизайн-проект">
                             <div class="implemetation__slider-name">
                                 <p>Дизайн-проект</p>
                             </div>
                         </div>
-                        <div class="implementation__slider-img" style="width: 400px;">
+                        <div class="implementation__slider-img" style="width: 50%;">
                             <img src="./img/implementation-img-2.png" alt="Реализация">
                             <div class="implemetation__slider-name">
                                 <p>Реализация</p>
@@ -956,24 +960,24 @@
     <section class="form-block">
         <div class="form-block-bg" style='background-image:url(./img/form-block-bg.png)'>
             <div class="svg-decor">
-                <svg viewBox='0 0 100 100' class="svg-content" preserveAspectRatio="none">
+                <svg viewBox='0 0 100 200' class="svg-content" preserveAspectRatio="none">
                     <defs>
                         <mask id='mask-5' x='0' y='0' width='100' height='100'>
-                            <rect x="0" y="0" width="100" height="100" fill="#fff"></rect>
+                            <rect x="0" y="0" width="100" height="200" fill="#fff"></rect>
                             <text class="text" fill='#000' id="text" font-size="60px" font-family= "Playfair Display SC" opacity="1">T</text>
                         </mask>
                     </defs>
                     <text class="text" fill='#58473c' id="text" font-size="60px" font-family= "Playfair Display SC" opacity="0.4">T</text>
-                    <rect x="0" y="0" width="100" height="100" fill="rgba(38,32,28,0.7)" mask="url(#mask-5)"></rect>
+                    <rect x="0" y="0" width="100" height="200" fill="rgba(38,32,28,0.7)" mask="url(#mask-5)"></rect>
                 </svg>
             </div>
         </div>
         <div class="form-block__wrapper container">
             <div class="form-block__description">
                 <h2 class="main_caption">Начнем работу сразу же</h2>
-                <ul class="general__list">
-                    <li>Мы бесплатно встретимся с у вас на площадке для проведения консультации, предварительно ознакосившись с доступными документами</li>
-                </ul>
+                <div class="general__list">
+                    <p>Мы бесплатно встретимся с у вас на площадке для проведения консультации, предварительно ознакосившись с доступными документами</p>
+                </div>
             </div>
             <div class="main-form__wrapper">
                 <ul class="main-form__list">
