--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
         <div class="offers-block__wrapper container">
             <h2 class="main_caption">пакеты услуг ремонта</h2>
-            <ul class="offers-block__list">
+            <ul class="offers-block__list" id="offers-1">
                 <li class="offers-block__item">
                     <h5 class="caption">Комфорт</h5>
                     <div class="offers__list-wrapper active">
